--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>付 尭 | ポートフォリオ / Portfolio</title>
-  <meta name="description" content="付尭（北海道大学 情報科学院 M1）— 研究概要・研究業績・プロジェクト・スキル。" />
+  <meta name="description" content="付尭 　フ　ギョウ（北海道大学 情報科学院 M1）— 研究概要・研究業績・プロジェクト・スキル。" />
   <style>
     body{font-family:'Noto Sans JP',sans-serif;margin:0;padding:0;background:#fafafa;color:#222;line-height:1.6}
     .container{max-width:1000px;margin:auto;padding:20px}
@@ -18,7 +18,7 @@
   <div class="container">
     <header>
       <h1>付 尭 | 北海道大学 情報科学院 M1</h1>
-      <p>研究分野：Medical Image Analysis（医用画像解析）, Explainable AI（説明可能なAI）, and Computer Vision（コンピュータビジョン）</p>
+      <p>研究分野：Medical Image Analysis（医用画像解析）, Explainable AI（説明可能なAI）, Computer Vision（コンピュータビジョン）</p>
       <p>Fu Yao | M1, Graduate School of Information Science and Technology, Hokkaido University<br>
       Research Areas: Medical Image Analysis, Explainable AI, and Computer Vision</p>
     </header>
@@ -26,7 +26,7 @@
     <section class="section">
       <h2>研究概要 / Research Summary</h2>
       <div class="dual">
-        <p>【画像トーンマッピング】OOOOO（約200字）。</p>
+        <p>【画像トーンマッピング】現在、高速かつ高精度な画像トーンマッピング技術の研究に取り組んでおり、局所ヒストグラム均等化を応用して明暗バランスを適応的に制御し、自然で高精細な映像表現を実現しています。最終調整の段階にあり、実用化に向けた応用可能性も高く、今後の展開が期待されるテーマです。</p>
         <p>[Image Tone Mapping] OOOOO (around 200 words).</p>
         <p>【関節リウマチ画像位置合わせ】OOOOO（約200字）。</p>
         <p>[Rheumatoid Arthritis Image Registration] OOOOO (around 200 words).</p>
@@ -62,24 +62,24 @@
     <section class="section">
       <h2>スキル / Skills</h2>
       <div class="dual">
-        <p>Python, PyTorch, MATLAB, OpenCV, SimpleITK, Linux, Git, Image Processing, Deep Learning, Visualization</p>
-        <p>Python, PyTorch, MATLAB, OpenCV, SimpleITK, Linux, Git, Image Processing, Deep Learning, Visualization</p>
+        <p>Python , C++ , MATLAB , C ,　Java ,  Linux , Git </p>
+        <p>Image Processing , Machine Learning , Computer Vision</p>
       </div>
     </section>
 
     <section class="section">
       <h2>資格・受賞 / Certifications & Awards</h2>
       <div class="dual">
-        <p>TOEIC：OOOOO　JLPT：OOOOO　その他：OOOOO</p>
-        <p>TOEIC: OOOOO　JLPT: OOOOO　Others: OOOOO</p>
-      </div>
-    </section>
-
-    <section class="section">
-      <h2>連絡先 / Contact</h2>
-      <div class="dual">
-        <p>メール：OOOOO　GitHub：OOOOO　LinkedIn：OOOOO</p>
-        <p>Email: OOOOO　GitHub: OOOOO　LinkedIn: OOOOO</p>
+        <p>TOEIC：745点　　</p>
+        <p>TOEIC: 745　  </p>
+        <p>2021-2022年  一等奨学金　  </p>
+        <p>2021-2022年  First-Class Scholarship　  </p>
+        <p>2022-2023年  一等奨学金　  </p>
+        <p>2022-2023年  First-Class Scholarship　  </p>
+        <p>2023年6月  　学部優秀卒業生　  </p>
+        <p>2023年6月  　Outstanding Undergraduate Graduate　  </p>
+        <p>2023年6月  　優秀学部卒業論文　　　　　　 </p>
+        <p>2023年6月  　Best Bachelor’s Thesis Award　　　　　　 </p>
       </div>
     </section>
 
