--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>[Image Tone Mapping]</p>
         <p>I am currently conducting research on a high-speed, high-precision image tone-mapping technique that adaptively controls brightness balance using localized histogram equalization to achieve natural and detailed image representation. The study is now in its final refinement stage and has strong potential for practical applications and future development..</p>
         <p></p>
-        <p>【関節リウマチ画像位置合わせ】</p>
+        <p>【関節リウマチ画像レジストレーション】</p>
         <p>関節リウマチ（RA）の診断支援を目的としたX線画像解析に取り組んでいます。RAの進行に伴う骨侵蝕や骨の重なりは従来の診断や自動解析を困難にするため、骨構造を分離し情報を高精度に抽出する新しい画像生成手法を開発しました。現在は専門医監修のもと、多施設連携によるアノテーション付きデータセットの構築と、MRI撮影時に生じる手の動きを補正するための3D画像位置合わせの研究にも取り組んでいます。医用画像AIの信頼性向上と診断支援の実用化を目指しています。</p>
         <p>[Rheumatoid Arthritis Image Registration]</p> 
         <p>I am conducting research on X-ray image analysis for supporting the diagnosis of rheumatoid arthritis (RA). Bone erosion and overlap caused by RA progression make both conventional diagnosis and algorithmic analysis difficult. To address this, I have developed a novel image-generation approach that separates bone structures and accurately extracts bone information. Under the supervision of medical specialists, I am also building a multi-institutional annotated dataset and working on 3D image registration to correct hand motion during MRI scanning. This research aims to enhance the reliability of medical image AI and contribute to practical diagnostic support.</p>
