--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <section class="section">
       <h2>学部卒業研究 / Bachelor's Thesis</h2>
       <div class="dual">
-        <p>COVID-19パンデミックにおける放射線科医の不足を背景に、深層学習による医用画像セグメンテーションの需要が高まりました。本研究では、COVID-19 CT画像のセグメンテーション精度向上を目的とし、残差構造と注意機構を組み合わせた改良型モデルを開発しました。100枚のラベル付きCT画像を用いた比較実験では、肺結節周辺の抽出精度が従来モデルに比べて約3.4％向上し、大規模CT画像処理への応用も期待されています。 </p>
-        <p>Amid the shortage of radiologists during the COVID-19 pandemic, the demand for deep learning–based medical image segmentation has increased. This study focuses on improving segmentation accuracy for COVID-19 CT images through a modified model that integrates residual structures and attention mechanisms. Experiments using 100 labeled CT images demonstrated approximately 3.4% higher accuracy around lung nodule regions compared with conventional models, indicating its potential for large-scale CT image analysis.</p>
+        <p>COVID-19パンデミックにおける放射線科医の不足を背景に、深層学習による医用画像セグメンテーションの需要が高まりました。本研究では、COVID-19 CT画像のセグメンテーション精度向上を目的とし、残差構造と注意機構を組み合わせた改良型モデルを開発しました。ラベル付きCT画像を用いた比較実験では、肺結節周辺の抽出精度が従来モデルに比べて約3.4％向上し、大規模CT画像処理への応用も期待されています。 </p>
+        <p>Amid the shortage of radiologists during the COVID-19 pandemic, the demand for deep learning–based medical image segmentation has increased. This study focuses on improving segmentation accuracy for COVID-19 CT images through a modified model that integrates residual structures and attention mechanisms. Experiments using labeled CT images demonstrated approximately 3.4% higher accuracy around lung nodule regions compared with conventional models, indicating its potential for large-scale CT image analysis.</p>
       </div>
     </section>
 
